--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Add user to app database</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
+    <nav class="navbar">
+      <a href="/">home</a>
+    </nav>
     {% if popup %}
       <ul class=flashes>
       {% for category, message in popup %}
@@ -14,15 +18,10 @@
       {% endfor %}
       </ul>
     {% endif %}
-    <div class="bulk_body">
-    {% for user in users %}
-      <div class="book_repr">
-        <div>
-          <a href="/users/{{ user.id }}">{{ user.name }}</a>
-          <h3>{{ user.name }}</h3>
-        </div>
-      </div>
-    {% endfor %}
-    </div>
+    <form class="form" action="/add_user" method="POST">
+      <label for="name">User Name</label>
+      <input type="text" id="name" name="name" required><br><br>
+      <input type="submit" value="Add New User">
+    </form>
   </body>
 </html>
