--- a/templates/users.html
+++ b/templates/users.html
@@ -20,7 +20,7 @@
     {% endif %}
     <div class="bulk_body">
     {% for user in users %}
-      <div class="book_repr">
+      <div class="movie_repr">
         <div>
           <a href="/users/{{ user.id }}">{{ user.name }}</a>
           <h3>{{ user.name }}</h3>
