--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404</title>
+    <title>MyMovieDB</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" type="image/png" sizes="192x192" href="{{ url_for('static', filename='favicon.png') }}">
   </head>
@@ -12,6 +12,8 @@
     <nav class="navbar">
       <a href="/users">select user</a>
     </nav>
-    <p class="instruction" style="background-color: #630e0e;">404 page not found</p>
+    <p class="instruction" style="background-color: #630e0e;">
+      Welcome to MovieDB, a place to keep track of your favorite movies
+    </p>
   </body>
 </html>
