--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -23,6 +23,9 @@
       </ul>
     {% endif %}
     <div class="bulk_body">
+      <p style="font-size:2em; margin-left:20px; color: #3d495c; font-weight: bold;">{{ user }}'s movie database</p>
+    </div>
+    <div class="bulk_body">
       {% for movie in movies %}
        <div class="movie_repr">
           <div>
@@ -33,7 +36,11 @@
                   alt="missing poster"
                   onerror="this.onerror=null; this.src='/static/missing_image.jpg';"
               />
-              <p class="movie-rating">{{ movie.rating }}</p>
+              {% if movie.rating == 0.0 %}
+                <p class="movie-rating">n/a</p>
+              {% else %}
+                <p class="movie-rating">{{ movie.rating }}</p>
+              {% endif %}
             </div>
           </div>
           <div>
