--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="/">home</a>
+      <a href="/users">select user</a>
     </nav>
     {% if popup %}
       <ul class=flashes>
