--- a/templates/confirm_adding.html
+++ b/templates/confirm_adding.html
@@ -14,10 +14,17 @@
       <a href="/users/{{ user_id }}/add_movie">add movie</a>
       <a href="/users/{{ user_id }}">home</a>
     </nav>
+    <div class="bulk_body">
+      <p class="username_bold">{{ user }}'s movie database</p>
+    </div>
     <p class="instruction">Is this the movie you wanted to add?</p>
     <div class="movie_centered">
       <div>
-        <h3 class="movie_header">{{ name }} ({{ year }})</h3>
+        {% if year == 0 %}
+          <h3 class="movie_header">{{ name }} (n/a)</h3>
+        {% else %}
+          <h3 class="movie_header">{{ name }} ({{ year }})</h3>
+        {% endif %}
         <div class="img-box">
           <img
               src="{{ poster }}"
