--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -15,6 +15,9 @@
       <a href="/users/{{ user_id }}/add_movie">add movie</a>
       <a href="/users/{{ user_id }}">home</a>
     </nav>
+    <div class="bulk_body">
+      <p class="username_bold">{{ user }}'s movie database</p>
+    </div>
     {% if popup %}
       <ul class=flashes>
       {% for category, message in popup %}
@@ -23,13 +26,14 @@
       </ul>
     {% endif %}
     <div class="bulk_body">
-      <p style="font-size:2em; margin-left:20px; color: #3d495c; font-weight: bold;">{{ user }}'s movie database</p>
-    </div>
-    <div class="bulk_body">
       {% for movie in movies %}
        <div class="movie_repr">
           <div>
-            <h3>{{ movie.name }} ({{ movie.year }})</h3>
+            {% if movie.year == 0 %}
+              <h3 class="movie_header">{{ movie.name }} (n/a)</h3>
+            {% else %}
+              <h3 class="movie_header">{{ movie.name }} ({{ movie.year }})</h3>
+            {% endif %}
             <div class="img-box">
               <img
                   src="{{ movie.poster }}"
