--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -12,8 +12,20 @@
     <nav class="navbar">
       <a href="/users">select user</a>
     </nav>
-    <p class="instruction" style="background-color: #630e0e;">
+    <p class="instruction" style="background-color: #3d495c; margin-top: 24px;">
       Welcome to MovieDB, a place to keep track of your favorite movies
     </p>
+    <div style="display: grid;">
+      <div style="justify-self: center; margin-top: 24px;">
+        <img
+            src="/static/welcome.jpg"
+            alt="error loading image"
+            width="1000"
+            height="600"
+            style="width: 1000px;"
+            border="2px solid #000"
+        >
+      </div>
+    </div>
   </body>
 </html>
