update navbar button names

--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="/users">switch user</a>
+      <a href="/users">switch users</a>
       <a href="/users/{{ user_id }}/add_movie">add movie</a>
       <a href="/users/{{ user_id }}">home</a>
     </nav>
