--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="/users">select user</a>
+      <a href="/users">login</a>
     </nav>
     <p class="instruction" style="background-color: #3d495c; margin-top: 24px;">
       Welcome to MovieDB, a place to keep track of your favorite movies
