--- a/templates/confirm_user_deletion.html
+++ b/templates/confirm_user_deletion.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="/users">switch user</a>
+      <a href="/users">switch users</a>
       <a href="/users/{{ user_id }}/add_movie">add movie</a>
       <a href="/users/{{ user_id }}">home</a>
     </nav>
