update text for /users

--- a/templates/users.html
+++ b/templates/users.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="/add_user">create account</a>
+      <a href="/add_user">add user</a>
       <a href="/">welcome page</a>
     </nav>
     <p class="instruction" style="background-color: #3d495c; margin-top: 24px;">
-      Select your account or create a new one
+      Select your user profile or add a new one
     </p>
     {% if popup %}
       <ul class=flashes>
