--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,22 +10,13 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="/users">login</a>
+      <a href="/users">Login</a>
     </nav>
-    <p class="instruction" style="background-color: #3d495c; margin-top: 24px;">
+    <p class="instruction">
       Welcome to MovieDB, a place to keep track of your favorite movies
     </p>
-    <div style="display: grid;">
-      <div style="justify-self: center; margin-top: 24px;">
-        <img
-            src="/static/welcome.jpg"
-            alt="error loading image"
-            width="1000"
-            height="600"
-            style="width: 1000px;"
-            border="2px solid #000"
-        >
-      </div>
+    <div class="image-container">
+
     </div>
   </body>
 </html>
